2003-12-03  Ettore Perazzoli  <ettore@ximian.com>

	* e-msg-composer-hdrs.c: Do not #include
	<evolution-folder-selector-button.h>.
	(e_msg_composer_hdrs_set_post_to): #if 0 out for now.
	(e_msg_composer_hdrs_get_post_to): Likewise.

2003-12-01  Rodney Dawes  <dobey@ximian.com>

	* e-msg-composer-hdrs.h: Use BASE_VERSION for repo_ids and OAFIIDs

2003-11-11  Radek Doulik  <rodo@ximian.com>

	* e-msg-composer.c (e_msg_composer_set_autosaved): new method to
	wrap autosaved flag setting
	(e_msg_composer_unset_autosaved): ditto
	(e_msg_composer_is_autosaved): new method, says if composer was
	autosaved only
	(autosave_save_draft): unset changed so that we don't autosave all
	the time when anything else than gtkhtml control changed

2003-11-06  Radek Doulik  <rodo@ximian.com>

	* e-msg-composer.c (autosave_save_draft): call gtkhtml's saved
	command to clean is-saved flag, set composer's autosaved flag
	(do_exit): complain if last save was just autosave
	(e_msg_composer_unset_changed): reset autosaved flag
	(save): reset autosaved flag

	* e-msg-composer.h: added autosaved flag, it tells whether last
	save was autosave or regular save, when changed flag is reset the
	autosaved one is reset too

2003-11-30  Ettore Perazzoli  <ettore@ximian.com>

	* e-msg-composer-hdrs.c (create_headers): #if 0 the "post to"
	stuff for now (it requires the global_shell_client and the
	evolution_folder_selector_button which we don't have anymore).

2003-11-26  Chris Toshok  <toshok@ximian.com>

	* e-msg-composer.c (build_message): switch from just checking
	SMIME_SUPPORTED to checking both HAVE_NSS and SMIME_SUPPORTED.

2003-11-26  JP Rosevear  <jpr@ximian.com>

	* Makefile.am: turn on deprecated gtk widgets

2003-11-03  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer.c (build_message): changed to use ciphercontext
	directly to sign the message, no multipart-signed usage.
	(build_message): do the same for multipart/encryption for gpg encrypting.
